@@ -1,5 +1,10 @@
 2013-01-31  Tom Tromey  <tromey@redhat.com>
 
+	* gdb.dwarf2/method-ptr.cc: New file.
+	* gdb.dwarf2/method-ptr.exp: New file.
+
+2013-01-31  Tom Tromey  <tromey@redhat.com>
+
 	* lib/dwarf.exp (namespace Dwarf): New.
 
 2013-01-29  Tom Tromey  <tromey@redhat.com>
