@@ -1,3 +1,9 @@
+2013-01-31  Tom Tromey  <tromey@redhat.com>
+
+	PR c++/14998:
+	* dwarf2read.c (read_tag_ptr_to_member_type): Handle
+	TYPE_CODE_FUNC.
+
 2013-01-31  Aleksandar Ristovski  <aristovski@qnx.com>
 
 	* target.c (target_read_string): Remove unused origlen.
